@@ -1,3 +1,8 @@
+2007-12-22  Juan Manuel Guerrero  <juan.guerrero@gmx.de>  (tiny change)
+
+	* glob/glob.c [__GNU_LIBRARY__ && __DJGPP__]: Add a realloc
+	declaration that matches the one in the DJGPP libc.
+
 2006-02-24  Eli Zaretskii  <eliz@gnu.org>
 
 	* glob.c (my_malloc) [WINDOWS32]: Provide a full ISO C prototype,
